<resources>
    <string name="app_name">UnicornRace</string>
    <string name="unicorn_race">Unicorn Race</string>
    <string name="email">email</string>
    <string name="mat_khau">mat khau</string>
    <string name="login_result">login result</string>
    <string name="ng_nh_p">Đăng nhập</string>
    <string name="ho_c">Hoặc</string>
    <string name="facebook_app_id">1181248892436817</string>
    <string name="fb_login_protocol_scheme">fb1181248892436817</string>
    <string name="facebook_client_token">56789</string>
    <string name="th_i_gian_ch_y">thời gian chạy</string>
    <string name="qu_ng_ng_ch_y_c">Quãng đường chạy được</string>
    <string name="v_n_t_c">Vận tốc</string>
    <string name="l_ng_calories_ti_u_th">Lượng calories tiêu thụ</string>
    <string name="s_b_c_ch_n_t_c">Số bước chân đạt được</string>
    <string name="todo">TODO</string>
    <string name="action_distances">action distances</string>
    <string name="app_name_long">Privacy Friendly Pedometer</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Pedometer</string>
    <string name="action_training">Training</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="steps">Steps</string>
    <string name="calories">calories</string>
    <string name="activity_summary_subtitle">Summary of activities</string>
    <string name="activity_chart_summary_subtitle">Detailed summary of your activities</string>
    <string name="summary_card_kilocalories">kcal</string>
    <string name="summary_card_calories">cal</string>
    <string name="correct_steps">Correct steps</string>
    <string name="correct_steps_dialog_title">Correct steps</string>
    <string name="correct_steps_dialog_message">Please provide a new number of steps you walked.</string>
    <string name="hint_steps">Number of steps</string>
    <string name="pause_step_detection">Pause step detection</string>
    <string name="continue_step_detection">Continue step detection</string>
    <string name="help_overview_heading">Overview</string>
    <string name="help_intro">This app can count your steps in background, provides you an overview about your walked steps and allows you to define custom walking modes and notifications if the achievement of your daily step goal is in danger.</string>
    <string name="help_functionality_step_counter_summary">The step counter counts your daily steps in background and can be disabled in the settings.</string>
    <string name="help_functionality_notification_heading">Permanent Notification</string>
    <string name="help_functionality_notification">Notification</string>
    <string name="help_functionality_notification_summary">The permanent notification is necessary to keep the step counter alive in background. The content of the notification can be chosen in the settings.</string>
    <string name="help_functionality_notification_delete">You can disable all notifications in system preferences.</string>
    <string name="help_functionality_motivation_alert">Motivation alert</string>
    <string name="help_functionality_motivation_alert_summary">The app can show you motivation alerts if the achievement of your daily step goal is in danger. You can define the criterion, the time of day and the notification texts.</string>
    <string name="help_privacy_heading">Privacy Info</string>
    <string name="help_permission_boot_heading">Permission: Receive Boot Completed</string>
    <string name="help_permission_boot_description">is used to start the step counter and set the notifications at boot time. If the permission is not granted you have to start the app manually once after boot to activate the app.</string>
    <string name="help_permissions_selection">The permissions used by Privacy Friendly Pedometer can not be managed by the user in any Android version.</string>
    <string name="help_permission_wake_heading">Permission: Wake Lock</string>
    <string name="help_permission_wake_description">is used to keep the CPU awake to count the steps in background.</string>
    <string name="help_permission_gps_heading">Permission: Precise location</string>
    <string name="help_permission_gps_description">is used to show your current walking speed on home screen. If the permission is not granted the walking speed will not be showed - there are no other implications.</string>
    <string name="pref_header_general">General</string>
    <string name="pref_group_title_personal_settings">Personalization</string>
    <string name="pref_step_counter_enabled" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.step_counter_enabled</string>
    <string name="pref_title_step_counter_enabled">Permanent step counter</string>
    <string name="pref_summary_step_counter_enabled">The app counts your steps in background.</string>
    <string name="pref_use_wake_lock" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.use_wake_lock</string>
    <string name="pref_title_use_wake_lock">Keep processor awake</string>
    <string name="pref_summary_use_wake_lock">On some devices the processor falls asleep and prevents counting steps. Enable this to keep the processor awake while counting steps - this may drain your battery!</string>
    <string name="pref_use_wake_lock_during_training" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.use_wake_lock_during_training</string>
    <string name="pref_title_use_wake_lock_during_training">Wake lock during training</string>
    <string name="pref_summary_use_wake_lock_during_training">For better results during training mode keep processor awake. If app should keep the processor awake at any time this is automatically the case.</string>
    <string name="pref_show_velocity" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.show_velocity</string>
    <string name="pref_title_show_velocity">Show current velocity</string>
    <string name="pref_summary_show_velocity">The app shows your current velocity in daily report. Access to your location is required to calculate the exact velocity.</string>
    <string name="pref_default_daily_step_goal" translatable="false">10000</string>
    <string name="pref_title_daily_step_goal">Personal daily step goal</string>
    <string name="pref_unit_of_length" translatable="false">com.example.unicornrace.pref.unit_of_length</string>
    <string name="pref_title_unit_of_length">Unit of length</string>
    <string-array name="pref_keys_unit_of_length">
        <item>kilometers</item>
        <item>miles</item>
    </string-array>
    <string-array name="pref_values_unit_of_length" translatable="false">
        <item>km</item>
        <item>mi</item>
    </string-array>
    <string name="unit_of_length_km">1|km|kilometers|km/h|1000|m</string>
    <string name="unit_of_length_mi">0.621371|mi|miles|mph|5280|ft</string>
    <string name="pref_unit_of_energy" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.unit_of_energy</string>
    <string name="pref_title_unit_of_energy">Unit of energy</string>
    <string-array name="pref_keys_unit_of_energy">
        <item>calories</item>
        <item>joules</item>
    </string-array>
    <string-array name="pref_values_unit_of_energy" translatable="false">
        <item>cal</item>
        <item>J</item>
    </string-array>
    <string name="pref_explanation_weight_and_gender">To improve the calculation of the calories please set your weight and gender.</string>
    <string name="pref_summary_notification_permanent">The permanent notification is shown when the app counts your steps in background. You can customize what the app should show you.</string>
    <string name="pref_summary_accelerometer_threshold">The app uses the accelerometer of your device. To optimize the step detection adjust the sensitivity, please.</string>
    <string name="pref_weight" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.weight</string>
    <string name="pref_title_weight">Weight (kg)</string>
    <string name="pref_default_weight" translatable="false">65.0</string>
    <string name="pref_gender" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.gender</string>
    <string name="pref_title_gender">Gender</string>
    <string-array name="pref_keys_gender">
        <item>female</item>
        <item>male</item>
    </string-array>
    <string-array name="pref_values_gender" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="pref_accelerometer_threshold" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.accelerometer_threshold</string>
    <string name="pref_title_accelerometer_threshold">Sensitivity</string>
    <string-array name="pref_keys_accelerometer_threshold">
        <item>very high</item>
        <item>higher</item>
        <item>high</item>
        <item>normal</item>
        <item>low</item>
        <item>lower</item>
        <item>very low</item>
    </string-array>
    <string-array name="pref_values_accelerometer_threshold" translatable="false">
        <item>0.125</item>
        <item>0.25</item>
        <item>0.50</item>
        <item>0.75</item>
        <item>1.00</item>
        <item>1.25</item>
        <item>1.50</item>
    </string-array>
    <string name="pref_accelerometer_steps_threshold" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.accelerometer_step_threshold</string>
    <string name="pref_title_accelerometer_steps_threshold">Steps before counting starts</string>
    <string name="pref_default_accelerometer_steps_threshold" translatable="false">10</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_group_title_permanent_notification">Permanent Notification</string>
    <string name="pref_group_title_motivation_alert">Motivation Alert</string>
    <string name="pref_notification_permanent_show_steps" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.permanent_notification_show_steps</string>
    <string name="pref_title_notification_permanent_show_steps">Show number of steps walked today</string>
    <string name="pref_notification_permanent_show_distance" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.permanent_notification_show_distance</string>
    <string name="pref_title_notification_permanent_show_distance">Show distance walked today</string>
    <string name="pref_notification_permanent_show_calories" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.permanent_notification_show_calories</string>
    <string name="pref_title_notification_permanent_show_calories">Show number of calories</string>
    <string name="pref_notification_motivation_alert_enabled" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.motivation_alert_enabled</string>
    <string name="pref_title_notification_motivation_alert_enabled">Enable motivation alert</string>
    <string name="pref_notification_motivation_alert_time" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.motivation_alert_time</string>
    <string name="pref_title_notification_motivation_alert_time">Motivation alert time</string>
    <string name="pref_notification_motivation_alert_texts" translatable="false">org.secuso.privacyfriendlyactivitytracker.pref.motivation_alert_texts</string>
    <string name="pref_header_walking_modes">Walking modes</string>
    <string name="ch_a_c_t_i_kho_n_ng_k_y">Chưa có tài khoản ? Đăng ký ở đây</string>
</resources>