<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/training_overview_activity"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:layout_margin="14dp"
    android:orientation="vertical"
    tools:context=".Activities.TrainingActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="4dp"
                    android:src="@drawable/ic_clock_grey600_24dp"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/training_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@+id/imageView8"
                    android:textColor="@color/darkgrey"
                    android:textIsSelectable="false"
                    android:textSize="39sp" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/training_duration"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/training_duration"
                    android:text="@string/th_i_gian_ch_y"
                    android:textColor="@color/darkgrey" />
            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_transfer_within_a_station_65black_30px"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/training_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@+id/imageView4"
                    android:textColor="@color/darkgrey"
                    android:textSize="39sp" />

                <TextView
                    android:id="@+id/training_distance_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/training_distance"
                    android:layout_marginStart="4dp"
                    android:layout_toEndOf="@+id/training_distance"
                    android:text="@string/qu_ng_ng_ch_y_c"
                    android:textColor="@color/darkgrey" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_directions_run"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/training_velocity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@+id/imageView6"
                    android:textColor="@color/darkgrey"
                    android:textSize="39sp" />

                <TextView
                    android:id="@+id/training_velocity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@id/training_velocity"
                    android:layout_alignTop="@+id/training_velocity"
                    android:layout_toEndOf="@+id/training_velocity"
                    android:text="@string/v_n_t_c"
                    android:textColor="@color/darkgrey" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_fire_65black_40dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/training_calories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@+id/imageView2"
                    android:textColor="@color/darkgrey"
                    android:textSize="39sp" />

                <TextView
                    android:id="@+id/training_calories_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignBaseline="@id/training_calories"
                    android:layout_toEndOf="@+id/training_calories"
                    android:text="@string/l_ng_calories_ti_u_th"
                    android:textColor="@color/darkgrey" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_directions_walk_65black_30dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/training_steps"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@+id/imageView3"
                    android:textColor="@color/darkgrey"
                    android:textSize="39sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_alignBaseline="@id/training_steps"
                    android:layout_toEndOf="@+id/training_steps"
                    android:text="@string/s_b_c_ch_n_t_c"
                    android:textColor="@color/darkgrey" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/training_stop_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="Stop"
            android:textColor="@color/white"
            android:background="@drawable/round_bg"
            tools:ignore="HardcodedText" />



    </LinearLayout>
</LinearLayout>